Enhance profile section with smooth animations and improved styling
✨ Enhanced Profile Section with Animations:

🎯 Professional Status Header:
- Added status indicator with 'Santosh' name and leaf icon
- Green 'Available' badge with blinking dot animation
- Clean horizontal layout with proper spacing
- Smooth fade-in animations with staggered timing

🖼️ Enhanced Profile Image:
- Reduced size to 100px for better proportion
- Added floating animation (subtle up-down movement)
- Enhanced hover effects with rotation and scaling
- Improved pulsing ring animation with smoother transitions

📝 Animated Text Elements:
- Name: Staggered glow animation with slide-up effect
- Title: Slide-in from left with fade effect
- Location: Fade-up animation with proper timing
- All text elements have smooth entrance animations

📊 Interactive Statistics:
- Horizontal stats with enhanced spacing (2rem gaps)
- Individual stat items with pulsing animations
- Staggered animation delays for visual appeal
- Hover effects with color changes and scaling
- Interactive dividers that glow on hover
- Smooth transitions with cubic-bezier easing

🔘 Advanced Button Animations:
- Shimmer effects on hover with sliding light
- Enhanced glass-morphism styling
- Improved hover transformations with scaling
- Better color transitions and shadow effects
- Professional button styling matching the image reference

📱 Enhanced Social Links:
- Shimmer sweep animations on hover
- Rotation and scaling effects
- Improved glass-morphism design
- Better spacing and sizing (38px)
- Smooth color transitions to primary blue

🎨 Visual Design Improvements:
- Reduced card background opacity for cleaner look
- Enhanced backdrop blur effects (25px)
- Improved border radius and shadows
- Better color contrast and readability
- Professional spacing and typography

⏱️ Staggered Animation Timeline:
- Status header: 0.2s delay
- Main profile: 0.4s delay
- Name: 0.6s delay
- Title: 0.8s delay
- Location: 1.0s delay
- Stats: 1.2s delay

--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                         <div class="hero-dashboard">
                             <!-- Professional Profile Card -->
                             <div class="profile-card">
+                                <!-- Profile Header with Status -->
+                                <div class="profile-header-section">
+                                    <div class="profile-status-indicator">
+                                        <div class="status-name">
+                                            <i class="fas fa-leaf"></i>
+                                            <span>Santosh</span>
+                                        </div>
+                                        <div class="status-badge">
+                                            <div class="status-dot"></div>
+                                            <span>Available</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                
                                 <!-- Main Profile Section -->
                                 <div class="profile-main">
                                     <!-- Profile Image -->
@@ -50,10 +64,6 @@
                                         <div class="profile-image-wrapper">
                                             <img src="https://raw.githubusercontent.com/santoshsirikonda/santosh-portfolio/main/profile-photo.jpg" alt="Santosh Sirikonda" class="profile-photo" id="profileImg">
                                             <div class="profile-ring"></div>
-                                        </div>
-                                        <div class="status-badge">
-                                            <div class="status-dot"></div>
-                                            <span>Available</span>
                                         </div>
                                     </div>
                                     
