Add comprehensive technologies to all positions in Professional Experience
✨ Enhanced Technology Stacks:

🏢 Mercedes-Benz Financial Services (AI/ML Engineer):
- AI/ML: Added OpenAI GPT, Vector Embeddings, LLM Integration, Agent Orchestration, RAG Systems, Fine-tuning, Transformer Models, NLP Pipelines
- Cloud: Added ECS, Fargate, RDS, ElastiCache, CloudWatch, Route 53, API Gateway, Secrets Manager
- Data: Added Apache Spark, Kafka, BigQuery, PostgreSQL, Redis, Elasticsearch, Data Validation, Feature Stores
- DevOps: Added Terraform, Helm, Kubeflow, TFX, Grafana, ELK Stack, GitLab CI, Azure DevOps

🏛️ State of New York (AI/ML Engineer):
- AI/ML: Added AutoML, BigQuery ML, Python Faker, NLP, Computer Vision, Deep Learning, Clustering, Explainable AI
- Cloud: Added Cloud Run, AI Platform, Cloud Build, Cloud SQL, Cloud IAM, Cloud Monitoring, Cloud Logging, API Gateway

🏢 Tech Mahindra (Software Developer):
- AI/ML: Added scikit-learn, Feature Engineering, Model Validation, Hyperparameter Tuning, Ensemble Methods, Time Series, Classification
- Web & Data: Added SQL, PostgreSQL, MongoDB, Redis, Kafka, Apache Spark, Data Visualization, Dashboard Development

🏢 Valuelabs (Software Developer):
- Backend: Added Spring MVC, Spring Data JPA, Spring Cloud, Microservices, RESTful APIs, GraphQL, MySQL, MongoDB
- Cloud & DevOps: Added EC2, S3, RDS, CloudFormation, Terraform, Prometheus, Grafana, GitLab CI

🎓 Talent Sprint Pvt Ltd (Software Developer):
- Web Development: Added HTML5, CSS3, JavaScript, RESTful APIs, JSON, AJAX, Web Services
- Tools & Testing: Added Maven, Mockito, TestNG, Eclipse IDE, IntelliJ IDEA, Postman, Version Control, Code Review, Debugging, Performance Tuning

🎯 Key Benefits:
- Comprehensive technology coverage for each position
- Better demonstration of technical breadth and depth
- More accurate representation of actual work experience
- Enhanced credibility for technical roles
- Detailed technology stacks matching industry standards

--- a/index.html
+++ b/index.html
@@ -398,6 +398,14 @@
                                                 <span>OpenCV</span>
                                                 <span>BERT</span>
                                                 <span>CrewAI</span>
+                                                <span>OpenAI GPT</span>
+                                                <span>Vector Embeddings</span>
+                                                <span>LLM Integration</span>
+                                                <span>Agent Orchestration</span>
+                                                <span>RAG Systems</span>
+                                                <span>Fine-tuning</span>
+                                                <span>Transformer Models</span>
+                                                <span>NLP Pipelines</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
@@ -411,6 +419,14 @@
                                                 <span>CloudFormation</span>
                                                 <span>IAM</span>
                                                 <span>VPC</span>
+                                                <span>ECS</span>
+                                                <span>Fargate</span>
+                                                <span>RDS</span>
+                                                <span>ElastiCache</span>
+                                                <span>CloudWatch</span>
+                                                <span>Route 53</span>
+                                                <span>API Gateway</span>
+                                                <span>Secrets Manager</span>
                                             </div>
                                         </div>
                                         <div class="tech-category data">
@@ -424,6 +440,14 @@
                                                 <span>Vector DBs</span>
                                                 <span>ETL Pipelines</span>
                                                 <span>Data Warehousing</span>
+                                                <span>Apache Spark</span>
+                                                <span>Kafka</span>
+                                                <span>BigQuery</span>
+                                                <span>PostgreSQL</span>
+                                                <span>Redis</span>
+                                                <span>Elasticsearch</span>
+                                                <span>Data Validation</span>
+                                                <span>Feature Stores</span>
                                             </div>
                                         </div>
                                         <div class="tech-category devops">
@@ -437,6 +461,14 @@
                                                 <span>Jenkins</span>
                                                 <span>MLflow</span>
                                                 <span>Prometheus</span>
+                                                <span>Terraform</span>
+                                                <span>Helm</span>
+                                                <span>Kubeflow</span>
+                                                <span>TFX</span>
+                                                <span>Grafana</span>
+                                                <span>ELK Stack</span>
+                                                <span>GitLab CI</span>
+                                                <span>Azure DevOps</span>
                                             </div>
                                         </div>
                                     </div>
@@ -481,6 +513,14 @@
                                                 <span>GANs</span>
                                                 <span>K-Means</span>
                                                 <span>DBSCAN</span>
+                                                <span>AutoML</span>
+                                                <span>BigQuery ML</span>
+                                                <span>Python Faker</span>
+                                                <span>NLP</span>
+                                                <span>Computer Vision</span>
+                                                <span>Deep Learning</span>
+                                                <span>Clustering</span>
+                                                <span>Explainable AI</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
@@ -494,6 +534,14 @@
                                                 <span>DataProc</span>
                                                 <span>Pub/Sub</span>
                                                 <span>Cloud Storage</span>
+                                                <span>Cloud Run</span>
+                                                <span>AI Platform</span>
+                                                <span>Cloud Build</span>
+                                                <span>Cloud SQL</span>
+                                                <span>Cloud IAM</span>
+                                                <span>Cloud Monitoring</span>
+                                                <span>Cloud Logging</span>
+                                                <span>API Gateway</span>
                                             </div>
                                         </div>
                                     </div>
@@ -537,6 +585,13 @@
                                                 <span>Pandas</span>
                                                 <span>NumPy</span>
                                                 <span>Anomaly Detection</span>
+                                                <span>scikit-learn</span>
+                                                <span>Feature Engineering</span>
+                                                <span>Model Validation</span>
+                                                <span>Hyperparameter Tuning</span>
+                                                <span>Ensemble Methods</span>
+                                                <span>Time Series</span>
+                                                <span>Classification</span>
                                             </div>
                                         </div>
                                         <div class="tech-category web">
@@ -550,6 +605,14 @@
                                                 <span>Feature Engineering</span>
                                                 <span>Model Governance</span>
                                                 <span>Airflow</span>
+                                                <span>SQL</span>
+                                                <span>PostgreSQL</span>
+                                                <span>MongoDB</span>
+                                                <span>Redis</span>
+                                                <span>Kafka</span>
+                                                <span>Apache Spark</span>
+                                                <span>Data Visualization</span>
+                                                <span>Dashboard Development</span>
                                             </div>
                                         </div>
                                     </div>
@@ -593,6 +656,14 @@
                                                 <span>Spring Security</span>
                                                 <span>OAuth2</span>
                                                 <span>SAML</span>
+                                                <span>Spring MVC</span>
+                                                <span>Spring Data JPA</span>
+                                                <span>Spring Cloud</span>
+                                                <span>Microservices</span>
+                                                <span>RESTful APIs</span>
+                                                <span>GraphQL</span>
+                                                <span>MySQL</span>
+                                                <span>MongoDB</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
@@ -606,6 +677,14 @@
                                                 <span>Blue/Green Deployment</span>
                                                 <span>ELK Stack</span>
                                                 <span>JUnit & Mockito</span>
+                                                <span>EC2</span>
+                                                <span>S3</span>
+                                                <span>RDS</span>
+                                                <span>CloudFormation</span>
+                                                <span>Terraform</span>
+                                                <span>Prometheus</span>
+                                                <span>Grafana</span>
+                                                <span>GitLab CI</span>
                                             </div>
                                         </div>
                                     </div>
@@ -649,6 +728,13 @@
                                                 <span>Servlets</span>
                                                 <span>JDBC</span>
                                                 <span>Bootstrap</span>
+                                                <span>HTML5</span>
+                                                <span>CSS3</span>
+                                                <span>JavaScript</span>
+                                                <span>RESTful APIs</span>
+                                                <span>JSON</span>
+                                                <span>AJAX</span>
+                                                <span>Web Services</span>
                                             </div>
                                         </div>
                                         <div class="tech-category tools">
@@ -657,11 +743,18 @@
                                                 <span>JUnit</span>
                                                 <span>Apache Tomcat</span>
                                                 <span>Apache DBCP</span>
-                                                <span>HTML5</span>
-                                                <span>CSS3</span>
-                                                <span>JavaScript</span>
-                                                <span>Agile Scrum</span>
+                                                <span>Maven</span>
                                                 <span>Git</span>
+                                                <span>Agile Scrum</span>
+                                                <span>Mockito</span>
+                                                <span>TestNG</span>
+                                                <span>Eclipse IDE</span>
+                                                <span>IntelliJ IDEA</span>
+                                                <span>Postman</span>
+                                                <span>Version Control</span>
+                                                <span>Code Review</span>
+                                                <span>Debugging</span>
+                                                <span>Performance Tuning</span>
                                             </div>
                                         </div>
                                     </div>
