--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                 <div class="contact-cta">
                     <h3>Ready to collaborate?</h3>
                     <p>Let's build something amazing together!</p>
-                    <a href="mailto:santosh.sirikonda@example.com" class="btn btn-primary">Send Message</a>
+                    <a href="mailto:santosh.kumar120517@gmail.com" class="btn btn-primary">Send Message</a>
                 </div>
             </div>
         </div>
@@ -1121,6 +1121,18 @@
                     <span>Santosh Sirikonda</span>
                 </div>
                 <p class="footer-text">Building the future with AI and innovation.</p>
+                <div class="footer-contact">
+                    <p class="contact-info">
+                        <i class="fas fa-envelope"></i>
+                        <span>Email: </span>
+                        <a href="mailto:santosh.kumar120517@gmail.com">santosh.kumar120517@gmail.com</a>
+                    </p>
+                    <p class="contact-info">
+                        <i class="fab fa-linkedin"></i>
+                        <span>LinkedIn: </span>
+                        <a href="https://www.linkedin.com/in/santosh-sirikonda-1ab988246/" target="_blank">@santosh-sirikonda-1ab988246</a>
+                    </p>
+                </div>
                 <div class="footer-social">
                     <a href="https://github.com/Sirikondasantosh" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
@@ -1128,7 +1140,7 @@
                     <a href="https://www.linkedin.com/in/santosh-sirikonda-1ab988246/" target="_blank" class="social-link">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="mailto:santosh.sirikonda@example.com" class="social-link">
+                    <a href="mailto:santosh.kumar120517@gmail.com" class="social-link">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
