Update location to United States in profile section
✨ Profile Location Update:

📍 Location Change:
- Updated location from 'San Francisco, CA' to 'United States'
- Maintains the map marker icon and styling
- More general location for broader appeal

🖼️ Profile Image:
- Profile image already properly configured with GitHub URL
- Image file exists in repository (profile-photo.jpg)
- Proper alt text and responsive styling in place

🎯 Profile Section:
- Name: Santosh Sirikonda ✓
- Title: AI/ML Engineer & Full Stack Developer ✓
- Location: United States ✓ (updated)
- Status: Available with green indicator ✓
- Profile photo with status badge ✓

The profile section now shows the correct location while maintaining all other professional elements!

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                         <p class="title">AI/ML Engineer & Full Stack Developer</p>
                                         <p class="location">
                                             <i class="fas fa-map-marker-alt"></i>
-                                            San Francisco, CA
+                                            United States
                                         </p>
                                     </div>
                                 </div>
